--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
   ],
   "require": {
     "php": ">=7.3",
-    "fond-of-oryx/util-math-formula": "dev-main",
+    "fond-of-oryx/util-math-formula": "^1.0.0",
     "spryker/country": "^3.1.0",
     "spryker/shipment": "^6.0.0 || ^7.0.0 || ^8.0.0",
     "spryker/shipment-extension": "^1.0.0",
