--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "php": ">=8.0",
     "fond-of-oryx/shipment-table-rate-extension": "^3.0.0",
     "fond-of-oryx/util-math-formula": "^1.0.0 || ^2.0.0",
-    "spryker/country": "^3.1.0",
+    "spryker/country": "^3.1.0 || ^4.0.0",
     "spryker/shipment": "^6.0.0 || ^7.0.0 || ^8.0.0",
     "spryker/shipment-extension": "^1.0.0",
     "spryker/store": "^1.2.0"
